source/_includes/3.3/documentation-iterm2-menu.md
#### iTerm2 > Show Tip of the Day
When you start using iTerm2 it will offer to show you a daily tip describing a feature. You can show a tip immediately by selecting this item.

#### iTerm2 > Check for Updates
Checks to see if a new version of iTerm2 is available. If Preferences > General > Prompt for test-release updates is turned on then this includes beta versions; otherwise only stable versions are downloaded.

#### iTerm2 > Toggle Debug Logging
This saves helpful debugging information in memory. When it is toggled off it is saved to /tmp/debuglog.txt.

#### iTerm2 > Copy Performance Stats
Copies information about drawing performance to the pasteboard. This is useful for filing bug reports.

#### iTerm2 > Profile CPU Usage
Creates a file with a sample of main thread CPU usage. This is useful for filing bug reports.

#### iTerm2 > Capture GPU Frame
Creates a file with information about how the screen was drawn when using the GPU renderer. This is useful for filing bug reports.

#### iTerm2 > Secure Keyboard Entry
When this is enabled, the operating system will prevent other programs running on your computer from being able to see what you are typing. If you're concerned that untrusted programs might try to steal your passwords, you can turn this on, but it may disable global hotkeys in other programs.

#### iTerm2 > Make iTerm2 Default Term
Makes iTerm2 the default terminal for opening .command, .tool, .zsh, .csh, and .pl files.

#### iTerm2 > Make Terminal Default Term
You must hold down Option for this entry to be visible. Makes Terminal.app the default terminal for opening .command, .tool, .zsh, .csh, and .pl files.

#### iTerm2 > Install Shell Integration
Runs a shell script that modifies your .bash_profile (or other startup script) and enables the <a href="/shell_integration.html">Shell Integration</a> features.


