source/_includes/3.7/documentation-iterm2-menu.md
#### iTerm2 > Show Tip of the Day
When you start using iTerm2 it will offer to show you a daily tip describing a feature. You can show a tip immediately by selecting this item.

#### iTerm2 > Companion Device Settings
Opens the pairing window for the companion app (iTerm2 Buddy). See <a href="documentation-companion.html">Companion</a> for details.

#### iTerm2 > Suppressed Alerts...
Lists warnings that are being answered automatically because you chose to remember a response. From here you can un-suppress them so they will prompt you again.

#### iTerm2 > Check for Updates
Checks to see if a new version of iTerm2 is available. If Settings > General > Prompt for test-release updates is turned on then this includes beta versions; otherwise only stable versions are downloaded.

#### iTerm2 > Toggle Debug Logging
This saves helpful debugging information in memory. When it is toggled off it is saved to /tmp/debuglog.txt.

#### iTerm2 > Save Retrospective Debug Logs
Writes recently captured low-frequency diagnostic information to a file, even if debug logging was never turned on. This is useful for reporting issues you did not anticipate.

#### iTerm2 > Copy Performance Stats
This copies information about drawing speed to the pasteboard. This is useful when reporting issues relating to poor performance.

#### iTerm2 > Capture GPU Frame
This saves information about how the current session is drawn. This is useful when reporting issues relating to drawing errors in the GPU renderer.

#### iTerm2 > Secure Keyboard Entry
When this is enabled, the operating system will prevent other programs running on your computer from being able to see what you are typing. If you're concerned that untrusted programs might try to steal your passwords, you can turn this on, but it may disable global hotkeys in other programs.

#### iTerm2 > Make iTerm2 Default Term
Makes iTerm2 the default terminal for opening .command, .tool, .zsh, .csh, and .pl files.

#### iTerm2 > Make Terminal Default Term
You must hold down Option for this entry to be visible. Makes Terminal.app the default terminal for opening .command, .tool, .zsh, .csh, and .pl files.

#### iTerm2 > Install Shell Integration
This opens a window that guides you through the installation of the <a href="/shell_integration.html">Shell Integration</a> features.

#### iTerm2 > Install Claude Code Integration
This opens a window that guides you through setting up the <a href="claude-code-integration.html">Claude Code Integration</a>. Once the integration is installed, this item is replaced by Reinstall and Uninstall entries.

#### iTerm2 > Reinstall Claude Code Integration
Reopens the Claude Code Integration setup window, for example if Claude Code has rewritten its settings and dropped the status hook. This item is visible only when the integration is installed.

#### iTerm2 > Uninstall Claude Code Integration
Removes the Claude Code Integration: the status hook it added to Claude Code's settings, the Claude Code Workgroup, and the Enter/Exit Workgroup triggers. This item is visible only when the integration is installed.

